@@ -30,6 +30,9 @@ import javafx.animation.FadeTransition;
 import services.JdbcLivreService;
 import services.JdbcLocationLivreService;
 import services.LivreService;
+import utils.StripePaymentHandler;
+import utils.EnvLoader;
+import com.stripe.exception.CardException;
 
 import javafx.application.Platform;
 import java.io.File;
@@ -40,7 +43,9 @@ import java.net.URL;
 import java.nio.file.Path;
 import java.sql.SQLDataException;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
@@ -252,7 +257,6 @@ public class BibliofrontController {
             imageView.setImage(toImage(livre.getImage()));
         }
 
-        // Center the image
         HBox imageContainer = new HBox();
         imageContainer.setAlignment(javafx.geometry.Pos.CENTER);
         imageContainer.getChildren().add(imageView);
@@ -266,7 +270,7 @@ public class BibliofrontController {
         categorie.setStyle("-fx-font-size: 11; -fx-text-fill: #6b7280; -fx-font-style: italic; -fx-text-alignment: center;");
         categorie.setMaxWidth(160);
         categorie.setWrapText(true);
-        
+
         Label prix = new Label((livre.getPrixLocation() == null ? "0" : livre.getPrixLocation()) + " DT");
         prix.setStyle("-fx-font-size: 12; -fx-text-fill: #3b82f6; -fx-font-weight: bold;");
 
@@ -307,7 +311,6 @@ public class BibliofrontController {
         card.setAlignment(javafx.geometry.Pos.CENTER);
         VBox.setVgrow(imageContainer, Priority.NEVER);
 
-        // Add hover effects for scale/zoom
         card.setOnMouseEntered(e -> {
             card.setStyle("-fx-padding: 15; -fx-background-color: white; -fx-border-color: #3b82f6; -fx-border-radius: 12; -fx-background-radius: 12; -fx-effect: dropshadow(gaussian, rgba(59,130,246,0.3), 15, 0, 0, 5);");
             card.setScaleX(1.05);
@@ -352,142 +355,63 @@ public class BibliofrontController {
 
         javafx.scene.control.ButtonType confirmButton = new javafx.scene.control.ButtonType("Confirmer la réservation", ButtonBar.ButtonData.OK_DONE);
         dialog.getDialogPane().getButtonTypes().addAll(confirmButton, javafx.scene.control.ButtonType.CANCEL);
-        
+
         Button confirmBtn = (Button) dialog.getDialogPane().lookupButton(confirmButton);
-        Button cancelBtn = (Button) dialog.getDialogPane().lookupButton(javafx.scene.control.ButtonType.CANCEL);
-        
-        // Style both buttons identically
+        Button cancelBtn  = (Button) dialog.getDialogPane().lookupButton(javafx.scene.control.ButtonType.CANCEL);
+
         String buttonStyle = "-fx-padding: 12 28; -fx-font-size: 14; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-font-weight: bold; -fx-border-radius: 8; -fx-cursor: hand;";
         confirmBtn.setStyle(buttonStyle);
         cancelBtn.setStyle("-fx-padding: 12 28; -fx-font-size: 14; -fx-background-color: #cbd5e1; -fx-text-fill: #334155; -fx-font-weight: bold; -fx-border-radius: 8; -fx-cursor: hand;");
-        
-        // Hover effects for confirm button
+
         confirmBtn.setOnMouseEntered(e -> confirmBtn.setStyle("-fx-padding: 12 28; -fx-font-size: 14; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-font-weight: bold; -fx-border-radius: 8; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.3), 8, 0, 0, 3);"));
         confirmBtn.setOnMouseExited(e -> confirmBtn.setStyle(buttonStyle));
-        
+
         confirmBtn.setDisable(true);
 
-        // State holder
         java.time.LocalDate[] selectedStart = {null};
-        java.time.LocalDate[] selectedEnd = {null};
+        java.time.LocalDate[] selectedEnd   = {null};
         int[] currentStep = {1};
 
-        // ===== STEP 1: CALENDAR SELECTION =====
+        // ── STEP 1: calendar ────────────────────────────────────────────────────
         VBox calendarStep = new VBox(20);
         calendarStep.setStyle("-fx-padding: 30; -fx-background-color: linear-gradient(to bottom, #ffffff, #f8f9fa);");
-
         Label stepTitleCal = new Label("📅 Sélectionnez vos dates de location");
         stepTitleCal.setStyle("-fx-font-size: 22; -fx-font-weight: bold; -fx-text-fill: #1e3a8a;");
-
         VBox calendarBox = createPremiumCalendarUI(selectedStart, selectedEnd, confirmBtn);
         calendarStep.getChildren().addAll(stepTitleCal, calendarBox);
         calendarStep.setFillWidth(true);
 
-        // ===== STEP 2: PAYMENT CONFIRMATION =====
+        // ── FIX 1: mainContainer declared FIRST so it can be passed to createModernPaymentForm ──
+        VBox mainContainer = new VBox();
+        mainContainer.getChildren().add(calendarStep);
+
+        // ── STEP 2: payment ─────────────────────────────────────────────────────
         VBox paymentStep = new VBox(20);
         paymentStep.setStyle("-fx-padding: 30; -fx-background-color: linear-gradient(to bottom, #ffffff, #f8f9fa);");
 
         Label stepTitlePay = new Label("💳 Confirmation de la réservation");
         stepTitlePay.setStyle("-fx-font-size: 22; -fx-font-weight: bold; -fx-text-fill: #1e3a8a;");
 
-        // Summary section with premium styling
         VBox summaryBox = new VBox(15);
         summaryBox.setStyle("-fx-padding: 20; -fx-background-color: white; -fx-border-color: #e0e7ff; -fx-border-radius: 12; -fx-background-radius: 12; -fx-border-width: 2; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.08), 8, 0, 0, 2);");
 
         Label dateRangeLabel = new Label();
         dateRangeLabel.setStyle("-fx-font-size: 14; -fx-text-fill: #1e293b; -fx-font-weight: bold;");
-
         Label daysLabel = new Label();
         daysLabel.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-text-fill: #0891b2;");
-
         Label priceLabel = new Label();
         priceLabel.setStyle("-fx-font-size: 16; -fx-font-weight: bold; -fx-text-fill: #10b981;");
 
         summaryBox.getChildren().addAll(dateRangeLabel, daysLabel, priceLabel);
 
-        // Payment method selector with modern styling
-        HBox paymentMethodBox = new HBox(15);
-        paymentMethodBox.setStyle("-fx-padding: 15; -fx-background-color: #f0f9ff; -fx-border-radius: 8;");
+        // mainContainer now exists — no compile error
+        VBox modernPaymentBox = createModernPaymentForm(livre, selectedStart, selectedEnd, mainContainer, paymentStep, confirmBtn);
 
-        javafx.scene.control.ToggleButton cardBtn = new javafx.scene.control.ToggleButton("💳 Carte Bancaire");
-        cardBtn.setStyle("-fx-padding: 10 20; -fx-font-size: 12; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-font-weight: bold; -fx-border-radius: 6; -fx-cursor: hand;");
-        cardBtn.setSelected(true);
-
-        javafx.scene.control.ToggleButton walletBtn = new javafx.scene.control.ToggleButton("💰 Portefeuille");
-        walletBtn.setStyle("-fx-padding: 10 20; -fx-font-size: 12; -fx-background-color: #cbd5e1; -fx-text-fill: #334155; -fx-border-radius: 6; -fx-cursor: hand;");
-
-        cardBtn.setOnAction(e -> {
-            if (cardBtn.isSelected()) {
-                cardBtn.setStyle("-fx-padding: 10 20; -fx-font-size: 12; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-font-weight: bold; -fx-border-radius: 6;");
-                walletBtn.setSelected(false);
-                walletBtn.setStyle("-fx-padding: 10 20; -fx-font-size: 12; -fx-background-color: #cbd5e1; -fx-text-fill: #334155; -fx-border-radius: 6;");
-            }
-        });
-
-        walletBtn.setOnAction(e -> {
-            if (walletBtn.isSelected()) {
-                walletBtn.setStyle("-fx-padding: 10 20; -fx-font-size: 12; -fx-background-color: #10b981; -fx-text-fill: white; -fx-font-weight: bold; -fx-border-radius: 6;");
-                cardBtn.setSelected(false);
-                cardBtn.setStyle("-fx-padding: 10 20; -fx-font-size: 12; -fx-background-color: #cbd5e1; -fx-text-fill: #334155; -fx-border-radius: 6;");
-            }
-        });
-
-        paymentMethodBox.getChildren().addAll(cardBtn, walletBtn);
-
-        // Professional card details form
-        VBox cardDetailsBox = new VBox(12);
-        cardDetailsBox.setStyle("-fx-padding: 20; -fx-background-color: #f8f9fa; -fx-border-color: #e2e8f0; -fx-border-radius: 10; -fx-background-radius: 10;");
-
-        // Card number field
-        Label cardNumberLabel = new Label("Numéro de carte");
-        cardNumberLabel.setStyle("-fx-font-size: 12; -fx-font-weight: bold; -fx-text-fill: #334155;");
-        TextField cardNumber = new TextField();
-        cardNumber.setPromptText("1234 5678 9012 3456");
-        cardNumber.setStyle("-fx-font-size: 13; -fx-padding: 12; -fx-border-color: #cbd5e1; -fx-border-radius: 6; -fx-border-width: 1;");
-
-        // Expiry and CVV
-        Label expiryLabel = new Label("Date d'expiration");
-        expiryLabel.setStyle("-fx-font-size: 12; -fx-font-weight: bold; -fx-text-fill: #334155;");
-        
-        HBox expiryBox = new HBox(12);
-        TextField cardExpiry = new TextField();
-        cardExpiry.setPromptText("MM/YY");
-        cardExpiry.setMaxWidth(120);
-        cardExpiry.setStyle("-fx-font-size: 13; -fx-padding: 12; -fx-border-color: #cbd5e1; -fx-border-radius: 6; -fx-border-width: 1;");
-
-        Label cvvLabel2 = new Label("CVV");
-        cvvLabel2.setStyle("-fx-font-size: 12; -fx-font-weight: bold; -fx-text-fill: #334155;");
-        
-        TextField cardCvv = new TextField();
-        cardCvv.setPromptText("123");
-        cardCvv.setMaxWidth(100);
-        cardCvv.setStyle("-fx-font-size: 13; -fx-padding: 12; -fx-border-color: #cbd5e1; -fx-border-radius: 6; -fx-border-width: 1;");
-
-        expiryBox.getChildren().addAll(cardExpiry, new Label("      "), cardCvv);
-
-        // Cardholder name
-        Label nameLabel = new Label("Nom du titulaire");
-        nameLabel.setStyle("-fx-font-size: 12; -fx-font-weight: bold; -fx-text-fill: #334155;");
-        TextField cardholderName = new TextField();
-        cardholderName.setPromptText("Jean Dupont");
-        cardholderName.setStyle("-fx-font-size: 13; -fx-padding: 12; -fx-border-color: #cbd5e1; -fx-border-radius: 6; -fx-border-width: 1;");
-
-        cardDetailsBox.getChildren().addAll(
-            cardNumberLabel, cardNumber,
-            expiryLabel, expiryBox,
-            nameLabel, cardholderName
-        );
-
-        // Terms checkbox
-        javafx.scene.control.CheckBox termsBox = new javafx.scene.control.CheckBox("J'accepte les conditions de location");
+        javafx.scene.control.CheckBox termsBox = new javafx.scene.control.CheckBox("J'accepte les conditions de location et la politique de paiement");
         termsBox.setStyle("-fx-font-size: 12; -fx-text-fill: #334155; -fx-padding: 10;");
 
-        paymentStep.getChildren().addAll(stepTitlePay, summaryBox, new Label("Méthode de paiement:"), paymentMethodBox, cardDetailsBox, termsBox);
+        paymentStep.getChildren().addAll(stepTitlePay, summaryBox, modernPaymentBox, termsBox);
         paymentStep.setFillWidth(true);
-
-        // Main container - stack layout
-        VBox mainContainer = new VBox();
-        mainContainer.getChildren().add(calendarStep);
 
         ScrollPane scrollPane = new ScrollPane(mainContainer);
         scrollPane.setStyle("-fx-background-color: white;");
@@ -505,20 +429,17 @@ public class BibliofrontController {
                     return;
                 }
 
-                // Move to payment step
                 event.consume();
                 currentStep[0] = 2;
 
-                // Update summary with dynamic book price - add 1 to include both start and end dates
                 long days = java.time.temporal.ChronoUnit.DAYS.between(selectedStart[0], selectedEnd[0]) + 1;
-                double bookPrice = livre.getPrixLocation() != null ? livre.getPrixLocation() : 0;
+                double bookPrice  = livre.getPrixLocation() != null ? livre.getPrixLocation() : 0;
                 double totalPrice = days * bookPrice;
 
                 dateRangeLabel.setText("📅 Du " + selectedStart[0] + " au " + selectedEnd[0]);
                 daysLabel.setText("⏱️ Durée : " + days + " jour(s)");
                 priceLabel.setText("💳 Total : " + String.format("%.2f", totalPrice) + " DT");
 
-                // Smooth transition
                 javafx.animation.FadeTransition fadeOut = new javafx.animation.FadeTransition(javafx.util.Duration.millis(250), calendarStep);
                 fadeOut.setFromValue(1.0);
                 fadeOut.setToValue(0.0);
@@ -533,22 +454,23 @@ public class BibliofrontController {
                 });
                 fadeOut.play();
 
-                confirmBtn.setText("✅ Valider la réservation");
+                confirmBtn.setText("✅ Payer maintenant");
+
             } else if (currentStep[0] == 2) {
                 if (!termsBox.isSelected()) {
                     event.consume();
                     showError("Validation", "Veuillez accepter les conditions de location.");
-                    return;
                 }
-                long days = java.time.temporal.ChronoUnit.DAYS.between(selectedStart[0], selectedEnd[0]);
-                dialog.setResultConverter(bt -> (int) days);
+                // Payment handled by the pay button inside modernPaymentBox
             }
         });
 
         dialog.setResultConverter(bt -> {
             if (bt == confirmButton) {
-                long days = java.time.temporal.ChronoUnit.DAYS.between(selectedStart[0], selectedEnd[0]);
-                return (int) days;
+                if (selectedStart[0] != null && selectedEnd[0] != null) {
+                    long days = java.time.temporal.ChronoUnit.DAYS.between(selectedStart[0], selectedEnd[0]);
+                    return (int) days;
+                }
             }
             return null;
         });
@@ -563,7 +485,6 @@ public class BibliofrontController {
         java.time.LocalDate today = java.time.LocalDate.now();
         java.time.YearMonth[] currentMonth = {java.time.YearMonth.now()};
 
-        // Header with navigation
         HBox headerBox = new HBox(20);
         headerBox.setAlignment(javafx.geometry.Pos.CENTER);
         headerBox.setStyle("-fx-padding: 15;");
@@ -580,14 +501,12 @@ public class BibliofrontController {
 
         headerBox.getChildren().addAll(prevBtn, monthLabel, nextBtn);
 
-        // Calendar grid with proper 7-column layout using GridPane for strict alignment
         javafx.scene.layout.GridPane calendarGrid = new javafx.scene.layout.GridPane();
         calendarGrid.setHgap(5);
         calendarGrid.setVgap(5);
         calendarGrid.setAlignment(javafx.geometry.Pos.CENTER);
         calendarGrid.setStyle("-fx-padding: 20; -fx-background-color: white; -fx-border-color: #e0e7ff; -fx-border-radius: 12; -fx-background-radius: 12; -fx-border-width: 2;");
 
-        // Day headers in French: DIM, LUN, MAR, MER, JEU, VEN, SAM
         String[] dayNames = {"DIM", "LUN", "MAR", "MER", "JEU", "VEN", "SAM"};
         for (int i = 0; i < dayNames.length; i++) {
             Label dayLabel = new Label(dayNames[i]);
@@ -598,39 +517,34 @@ public class BibliofrontController {
             calendarGrid.add(dayLabel, i, 0);
         }
 
-        // Update calendar
         final java.util.function.Consumer<java.time.YearMonth>[] updateCalendarHolder = new java.util.function.Consumer[1];
         updateCalendarHolder[0] = month -> {
-            // Format month in French
             String[] monthsInFrench = {"JANVIER", "FÉVRIER", "MARS", "AVRIL", "MAI", "JUIN", "JUILLET", "AOÛT", "SEPTEMBRE", "OCTOBRE", "NOVEMBRE", "DÉCEMBRE"};
             monthLabel.setText(monthsInFrench[month.getMonthValue() - 1] + " " + month.getYear());
-            
-            // Remove only date buttons, keep headers (row 0)
+
             calendarGrid.getChildren().removeIf(node -> {
                 Integer rowIndex = javafx.scene.layout.GridPane.getRowIndex(node);
                 return rowIndex != null && rowIndex > 0;
             });
 
             java.time.LocalDate firstDay = month.atDay(1);
-            java.time.LocalDate lastDay = month.atEndOfMonth();
-            // Java DayOfWeek: 1=MON, ..., 7=SUN. Our headers: 0=SUN, 1=MON, ...
-            int firstDayOfWeek = firstDay.getDayOfWeek().getValue() % 7; 
+            java.time.LocalDate lastDay  = month.atEndOfMonth();
+            int firstDayOfWeek = firstDay.getDayOfWeek().getValue() % 7;
 
             int currentColumn = firstDayOfWeek;
-            int currentRow = 1;
+            int currentRow    = 1;
 
-            // Add all days of the month
             for (int day = 1; day <= lastDay.getDayOfMonth(); day++) {
-                java.time.LocalDate date = month.atDay(day);
+                java.time.LocalDate date   = month.atDay(day);
                 Button dayBtn = new Button(String.valueOf(day));
                 dayBtn.setPrefWidth(60);
                 dayBtn.setPrefHeight(60);
 
-                boolean isPast = date.isBefore(today);
-                boolean isStart = selectedStart[0] != null && date.equals(selectedStart[0]);
-                boolean isEnd = selectedEnd[0] != null && date.equals(selectedEnd[0]);
-                boolean isInRange = (selectedStart[0] != null && selectedEnd[0] != null && 
-                                    !date.isBefore(selectedStart[0]) && !date.isAfter(selectedEnd[0]));
+                boolean isPast    = date.isBefore(today);
+                boolean isStart   = selectedStart[0] != null && date.equals(selectedStart[0]);
+                boolean isEnd     = selectedEnd[0]   != null && date.equals(selectedEnd[0]);
+                boolean isInRange = (selectedStart[0] != null && selectedEnd[0] != null &&
+                        !date.isBefore(selectedStart[0]) && !date.isAfter(selectedEnd[0]));
 
                 if (isPast) {
                     dayBtn.setStyle("-fx-background-color: #e2e8f0; -fx-text-fill: #94a3b8; -fx-cursor: not-allowed; -fx-font-size: 13; -fx-font-weight: bold; -fx-border-radius: 5;");
@@ -647,10 +561,10 @@ public class BibliofrontController {
                 dayBtn.setOnAction(e -> {
                     if (selectedStart[0] == null) {
                         selectedStart[0] = finalDate;
-                        selectedEnd[0] = finalDate;
+                        selectedEnd[0]   = finalDate;
                     } else if (selectedEnd[0] == null || finalDate.isBefore(selectedStart[0])) {
                         selectedStart[0] = finalDate;
-                        selectedEnd[0] = finalDate;
+                        selectedEnd[0]   = finalDate;
                     } else {
                         long daysBetween = java.time.temporal.ChronoUnit.DAYS.between(selectedStart[0], finalDate);
                         if (daysBetween > 30) {
@@ -659,46 +573,30 @@ public class BibliofrontController {
                         }
                         selectedEnd[0] = finalDate;
                     }
-
                     confirmBtn.setDisable(selectedStart[0] == null || selectedEnd[0] == null);
                     updateCalendarHolder[0].accept(month);
                 });
 
                 calendarGrid.add(dayBtn, currentColumn, currentRow);
-                
                 currentColumn++;
-                if (currentColumn > 6) {
-                    currentColumn = 0;
-                    currentRow++;
-                }
+                if (currentColumn > 6) { currentColumn = 0; currentRow++; }
             }
         };
 
         updateCalendarHolder[0].accept(currentMonth[0]);
 
-        prevBtn.setOnAction(e -> {
-            currentMonth[0] = currentMonth[0].minusMonths(1);
-            updateCalendarHolder[0].accept(currentMonth[0]);
-        });
-
-        nextBtn.setOnAction(e -> {
-            currentMonth[0] = currentMonth[0].plusMonths(1);
-            updateCalendarHolder[0].accept(currentMonth[0]);
-        });
+        prevBtn.setOnAction(e -> { currentMonth[0] = currentMonth[0].minusMonths(1); updateCalendarHolder[0].accept(currentMonth[0]); });
+        nextBtn.setOnAction(e -> { currentMonth[0] = currentMonth[0].plusMonths(1);  updateCalendarHolder[0].accept(currentMonth[0]); });
 
         calendarContainer.getChildren().addAll(headerBox, calendarGrid);
         return calendarContainer;
     }
 
     private static Integer parseJours(String value) {
-        if (value == null || value.isBlank()) {
-            return null;
-        }
+        if (value == null || value.isBlank()) return null;
         try {
             int v = Integer.parseInt(value.trim());
-            if (v < 1 || v > 30) {
-                return null;
-            }
+            if (v < 1 || v > 30) return null;
             return v;
         } catch (NumberFormatException e) {
             return null;
@@ -723,13 +621,11 @@ public class BibliofrontController {
             imageView.setImage(toImage(livre.getImage()));
         }
 
-        // Header section - Compact layout
         javafx.scene.control.Label title = new javafx.scene.control.Label(livre.getTitre() == null ? "" : livre.getTitre());
         title.setStyle("-fx-font-size: 16; -fx-font-weight: bold; -fx-text-fill: #1f2937; -fx-wrap-text: true;");
         title.setMaxWidth(280);
         title.setWrapText(true);
 
-        // Author
         HBox authorBox = new HBox(8);
         Label authorIcon = new Label("✍️");
         authorIcon.setStyle("-fx-font-size: 14;");
@@ -738,7 +634,6 @@ public class BibliofrontController {
         authorBox.getChildren().addAll(authorIcon, authorLabel);
         authorBox.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
 
-        // Category
         HBox categoryBox = new HBox(8);
         Label categoryIcon = new Label("📚");
         categoryIcon.setStyle("-fx-font-size: 14;");
@@ -747,9 +642,7 @@ public class BibliofrontController {
         categoryBox.getChildren().addAll(categoryIcon, categoryLabel);
         categoryBox.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
 
-        // Price & Availability in same row
         HBox priceDispoBox = new HBox(20);
-        
         HBox priceBox = new HBox(6);
         Label priceIcon = new Label("💰");
         priceIcon.setStyle("-fx-font-size: 14;");
@@ -765,41 +658,31 @@ public class BibliofrontController {
         dispoLabel.setStyle("-fx-font-size: 12; -fx-text-fill: " + (Boolean.TRUE.equals(livre.getDisponibilite()) ? "#10b981" : "#ef4444") + "; -fx-font-weight: bold;");
         dispoBox.getChildren().addAll(dispoIcon, dispoLabel);
         dispoBox.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
-        
         priceDispoBox.getChildren().addAll(priceBox, dispoBox);
 
-        // Right column - Title and details
         VBox rightColumn = new VBox(8);
         rightColumn.getChildren().addAll(title, authorBox, categoryBox, priceDispoBox);
         rightColumn.setStyle("-fx-padding: 0;");
 
-        // Header box with image and right column
         HBox headerBox = new HBox(15);
         headerBox.getChildren().addAll(imageView, rightColumn);
         headerBox.setStyle("-fx-padding: 15; -fx-background-color: #f9fafb; -fx-border-color: #e5e7eb; -fx-border-radius: 10; -fx-background-radius: 10;");
         headerBox.setAlignment(javafx.geometry.Pos.TOP_LEFT);
 
-        // Description section - Dynamic height
         VBox descSection = new VBox(8);
         descSection.setStyle("-fx-padding: 15; -fx-border-color: #e5e7eb; -fx-border-radius: 10; -fx-background-radius: 10; -fx-background-color: white;");
-
         Label descTitle = new Label("📖 Description");
         descTitle.setStyle("-fx-font-size: 13; -fx-font-weight: bold; -fx-text-fill: #1f2937;");
-
         TextArea desc = new TextArea(livre.getDescription() == null || livre.getDescription().isEmpty() ? "Aucune description disponible" : livre.getDescription());
         desc.setEditable(false);
         desc.setWrapText(true);
         desc.setStyle("-fx-font-size: 12; -fx-text-fill: #4b5563; -fx-control-inner-background: #f9fafb; -fx-padding: 8;");
-        
-        // Calculate optimal height based on text content
         int lineCount = (livre.getDescription() == null ? 1 : livre.getDescription().split("\n").length) + 2;
         int minHeight = Math.max(60, Math.min(150, lineCount * 18));
         desc.setPrefRowCount(minHeight / 18);
         desc.setMinHeight(minHeight);
-
         descSection.getChildren().addAll(descTitle, desc);
 
-        // Main content
         VBox mainContent = new VBox(12);
         mainContent.getChildren().addAll(headerBox, descSection);
         mainContent.setPrefWidth(500);
@@ -807,13 +690,10 @@ public class BibliofrontController {
 
         LocationLivre activeLocation = null;
         if (livre.getId() != null) {
-            try {
-                activeLocation = locationLivreService.getActiveLocation(livre.getId(), currentUserId);
-            } catch (SQLDataException ignored) {
-            }
+            try { activeLocation = locationLivreService.getActiveLocation(livre.getId(), currentUserId); }
+            catch (SQLDataException ignored) {}
         }
 
-        // Rental progress section
         if (activeLocation != null) {
             openPdfButton.setDisable(false);
 
@@ -826,10 +706,8 @@ public class BibliofrontController {
             progressLabel.setStyle("-fx-text-fill: #4b5563; -fx-font-size: 12; -fx-font-weight: bold;");
 
             HBox progressHeader = new HBox(10);
-            Label rentIcon = new Label("⏱️");
-            rentIcon.setStyle("-fx-font-size: 14;");
-            Label rentTitle = new Label("Location en cours");
-            rentTitle.setStyle("-fx-font-size: 13; -fx-font-weight: bold; -fx-text-fill: #1f2937;");
+            Label rentIcon  = new Label("⏱️"); rentIcon.setStyle("-fx-font-size: 14;");
+            Label rentTitle = new Label("Location en cours"); rentTitle.setStyle("-fx-font-size: 13; -fx-font-weight: bold; -fx-text-fill: #1f2937;");
             progressHeader.getChildren().addAll(rentIcon, rentTitle);
             progressHeader.setAlignment(javafx.geometry.Pos.CENTER_LEFT);
 
@@ -840,39 +718,25 @@ public class BibliofrontController {
             LocationLivre finalActiveLocation = activeLocation;
             Runnable updateProgress = () -> {
                 LocalDateTime start = finalActiveLocation.getDateDebut();
-                LocalDateTime end = finalActiveLocation.getDateRetour();
-                if (start == null || end == null) {
-                    progressBar.setProgress(0);
-                    progressLabel.setText("");
-                    return;
-                }
+                LocalDateTime end   = finalActiveLocation.getDateRetour();
+                if (start == null || end == null) { progressBar.setProgress(0); progressLabel.setText(""); return; }
                 LocalDateTime now = LocalDateTime.now();
-                long totalSeconds = Duration.between(start, end).getSeconds();
+                long totalSeconds   = Duration.between(start, end).getSeconds();
                 long elapsedSeconds = Duration.between(start, now).getSeconds();
                 double progress = totalSeconds > 0 ? (double) elapsedSeconds / totalSeconds : 1.0;
-                if (progress > 1.0) {
-                    progress = 1.0;
-                } else if (progress < 0) {
-                    progress = 0.0;
-                }
+                progress = Math.max(0, Math.min(1, progress));
                 progressBar.setProgress(progress);
-
                 Duration left = Duration.between(now, end);
                 if (left.isNegative() || left.isZero()) {
                     progressLabel.setText("⚠️ Location expirée");
                     progressLabel.setStyle("-fx-text-fill: #ef4444; -fx-font-size: 12; -fx-font-weight: bold;");
                 } else {
-                    long daysLeft = left.toDays();
-                    long hoursLeft = left.toHours() % 24;
-                    long minutesLeft = left.toMinutes() % 60;
-                    String timeRemaining;
-                    if (daysLeft > 0) {
-                        timeRemaining = daysLeft + "j " + hoursLeft + "h " + minutesLeft + "min";
-                    } else if (hoursLeft > 0) {
-                        timeRemaining = hoursLeft + "h " + minutesLeft + "min";
-                    } else {
-                        timeRemaining = minutesLeft + "min";
-                    }
+                    long daysLeft    = left.toDays();
+                    long hoursLeft   = left.toHours()   % 24;
+                    long minutesLeft = left.toMinutes()  % 60;
+                    String timeRemaining = daysLeft > 0 ? daysLeft + "j " + hoursLeft + "h " + minutesLeft + "min"
+                            : hoursLeft > 0 ? hoursLeft + "h " + minutesLeft + "min"
+                            : minutesLeft + "min";
                     progressLabel.setText("⏳ " + timeRemaining + " restants");
                     progressLabel.setStyle("-fx-text-fill: #3b82f6; -fx-font-size: 12; -fx-font-weight: bold;");
                 }
@@ -880,10 +744,7 @@ public class BibliofrontController {
 
             Timeline timeline = new Timeline(new KeyFrame(javafx.util.Duration.seconds(1), e -> updateProgress.run()));
             timeline.setCycleCount(Timeline.INDEFINITE);
-            dialog.setOnShown(e -> {
-                updateProgress.run();
-                timeline.play();
-            });
+            dialog.setOnShown(e -> { updateProgress.run(); timeline.play(); });
             dialog.setOnHidden(e -> timeline.stop());
         } else {
             openPdfButton.setDisable(true);
@@ -893,111 +754,387 @@ public class BibliofrontController {
         ScrollPane scrollPane = new ScrollPane(mainContent);
         scrollPane.setStyle("-fx-background-color: white; -fx-padding: 0;");
         scrollPane.setFitToWidth(true);
-
         dialog.getDialogPane().setContent(scrollPane);
         dialog.getDialogPane().setStyle("-fx-background-color: white;");
-
         dialog.setResultConverter(bt -> bt);
-        dialog.showAndWait().ifPresent(result -> {
-            if (result == openPdf) {
-                openPdfInApp(livre);
+        dialog.showAndWait().ifPresent(result -> { if (result == openPdf) openPdfInApp(livre); });
+    }
+
+    private void openPdfInApp(Livre livre) {
+        if (livre.getId() == null) { showError("PDF", "Livre invalide."); return; }
+        try {
+            LocationLivre loc = locationLivreService.getActiveLocation(livre.getId(), currentUserId);
+            if (loc == null) { showError("PDF", "Vous devez louer ce livre pour l'ouvrir."); return; }
+        } catch (SQLDataException e) { showError("PDF", "Impossible de vérifier la location."); return; }
+
+        if (readerNavigationHandler != null) { readerNavigationHandler.accept(livre); return; }
+
+        String pdfSource = livre.getFichierPdf();
+        if (pdfSource == null || pdfSource.isBlank()) { showError("PDF", "Aucun fichier PDF associé à ce livre."); return; }
+
+        Platform.runLater(() -> {
+            try {
+                FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/amateur/BookReader.fxml"));
+                Parent root = loader.load();
+                BookReaderController readerCtrl = loader.getController();
+                Scene readerScene = new Scene(root, 1280, 800);
+                Stage readerStage = new Stage();
+                readerStage.setTitle(livre.getTitre() != null ? livre.getTitre() : "Lecteur");
+                readerStage.setScene(readerScene);
+                readerCtrl.setStage(readerStage);
+                readerCtrl.setBackHandler(() -> { readerStage.setFullScreen(false); readerStage.close(); });
+                readerStage.show();
+                readerCtrl.setLivre(livre);
+            } catch (IOException e) {
+                e.printStackTrace();
+                showError("PDF", "Impossible de charger le lecteur : " + e.getMessage());
             }
         });
     }
 
-    private void openPdfInApp(Livre livre) {
-        if (livre.getId() == null) {
-            showError("PDF", "Livre invalide.");
-            return;
-        }
-
-        try {
-            LocationLivre loc = locationLivreService.getActiveLocation(livre.getId(), currentUserId);
-            if (loc == null) {
-                showError("PDF", "Vous devez louer ce livre pour l'ouvrir.");
-                return;
-            }
-        } catch (SQLDataException e) {
-            showError("PDF", "Impossible de vérifier la location.");
-            return;
-        }
-
-        if (readerNavigationHandler != null) {
-            readerNavigationHandler.accept(livre);
-        } else {
-            // Standalone fallback
-            String pdfSource = livre.getFichierPdf();
-            if (pdfSource == null || pdfSource.isBlank()) {
-                showError("PDF", "Aucun PDF pour ce livre.");
-                return;
-            }
-
-            CompletableFuture.runAsync(() -> {
-                try {
-                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/views/amateur/BookReader.fxml"));
-                    Parent root = loader.load();
-                    BookReaderController controller = loader.getController();
-                    controller.setPdfBytes(loadPdfBytes(pdfSource));
-                    Platform.runLater(() -> {
-                        Stage stage = new Stage();
-                        stage.setTitle(livre.getTitre());
-                        stage.setScene(new Scene(root));
-                        controller.setStage(stage);
-                        stage.show();
-                    });
-                } catch (IOException e) {
-                    Platform.runLater(() -> showError("PDF", "Impossible d'ouvrir le lecteur."));
-                }
-            });
-        }
-    }
-
     private Image toImage(String source) {
-        if (source == null || source.isBlank()) {
-            return null;
-        }
-        if (source.startsWith("http://") || source.startsWith("https://") || source.startsWith("file:")) {
+        if (source == null || source.isBlank()) return null;
+        if (source.startsWith("http://") || source.startsWith("https://") || source.startsWith("file:"))
             return new Image(source, true);
-        }
         return new Image(new File(source).toURI().toString(), true);
     }
 
     private byte[] loadPdfBytes(String pdfSource) throws IOException {
-        if (pdfSource == null || pdfSource.isBlank()) {
-            throw new IOException("Source PDF vide");
-        }
+        if (pdfSource == null || pdfSource.isBlank()) throw new IOException("Source PDF vide");
         if (pdfSource.startsWith("http://") || pdfSource.startsWith("https://")) {
-            try (InputStream inputStream = new URL(pdfSource).openStream()) {
-                return inputStream.readAllBytes();
-            }
+            try (InputStream is = new URL(pdfSource).openStream()) { return is.readAllBytes(); }
         }
         if (pdfSource.startsWith("file:")) {
-            try {
-                return java.nio.file.Files.readAllBytes(Path.of(URI.create(pdfSource)));
-            } catch (Exception ex) {
-                return java.nio.file.Files.readAllBytes(Path.of(new URL(pdfSource).getPath()));
-            }
+            try { return java.nio.file.Files.readAllBytes(Path.of(URI.create(pdfSource))); }
+            catch (Exception ex) { return java.nio.file.Files.readAllBytes(Path.of(new URL(pdfSource).getPath())); }
         }
         return java.nio.file.Files.readAllBytes(Path.of(pdfSource));
     }
 
     private static void showError(String title, String message) {
         Alert alert = new Alert(Alert.AlertType.ERROR);
-        alert.setTitle(title);
-        alert.setHeaderText(null);
-        alert.setContentText(message);
-        alert.showAndWait();
+        alert.setTitle(title); alert.setHeaderText(null); alert.setContentText(message); alert.showAndWait();
     }
 
     private static void showInfo(String title, String message) {
         Alert alert = new Alert(Alert.AlertType.INFORMATION);
-        alert.setTitle(title);
-        alert.setHeaderText(null);
-        alert.setContentText(message);
-        alert.showAndWait();
+        alert.setTitle(title); alert.setHeaderText(null); alert.setContentText(message); alert.showAndWait();
     }
 
     private static boolean containsIgnoreCase(String value, String query) {
         return value != null && value.toLowerCase().contains(query);
+    }
+
+    private VBox createModernPaymentForm(Livre livre, java.time.LocalDate[] selectedStart,
+                                         java.time.LocalDate[] selectedEnd, VBox mainContainer,
+                                         VBox paymentStep, Button confirmBtn) {
+        VBox formContainer = new VBox(15);
+        formContainer.setStyle("-fx-padding: 25; -fx-background-color: white; -fx-border-radius: 15; " +
+                "-fx-background-radius: 15; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.08), 12, 0, 0, 3);");
+
+        Label cardSectionLabel = new Label("🎴 Informations de carte");
+        cardSectionLabel.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-text-fill: #1e3a8a; -fx-padding: 0 0 10 0;");
+
+        Label cardNumberLabel = new Label("Numéro de carte");
+        cardNumberLabel.setStyle("-fx-font-size: 11; -fx-font-weight: bold; -fx-text-fill: #495057;");
+
+        TextField cardNumber = new TextField();
+        cardNumber.setPromptText("4242 4242 4242 4242");
+        cardNumber.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: #dee2e6; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8; -fx-font-family: 'Courier New';");
+        cardNumber.setMaxWidth(Double.MAX_VALUE);
+
+        Label cardNumberError = new Label();
+        cardNumberError.setStyle("-fx-font-size: 10; -fx-text-fill: #dc3545; -fx-padding: 4 0 0 0;");
+
+        cardNumber.textProperty().addListener((obs, oldVal, newVal) -> {
+            String cleaned = newVal.replaceAll("[^0-9]", "");
+            cardNumber.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: " +
+                    (cleaned.isEmpty() ? "#dee2e6" : (isValidCardNumber(cleaned) ? "#28a745" : "#dc3545")) +
+                    "; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8; -fx-font-family: 'Courier New';");
+            cardNumberError.setText(!cleaned.isEmpty() && !isValidCardNumber(cleaned) ? "Numéro de carte invalide" : "");
+        });
+
+        HBox expiryPanel = new HBox(12);
+
+        Label expiryLabel = new Label("Date d'expiration");
+        expiryLabel.setStyle("-fx-font-size: 11; -fx-font-weight: bold; -fx-text-fill: #495057;");
+
+        TextField cardExpiry = new TextField();
+        cardExpiry.setPromptText("MM/YY");
+        cardExpiry.setMaxWidth(150);
+        cardExpiry.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: #dee2e6; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8;");
+
+        Label expiryError = new Label();
+        expiryError.setStyle("-fx-font-size: 10; -fx-text-fill: #dc3545;");
+
+        cardExpiry.textProperty().addListener((obs, oldVal, newVal) -> {
+            String cleaned = newVal.replaceAll("[^0-9/]", "");
+            if (cleaned.length() == 2 && !cleaned.contains("/")) { cleaned = cleaned + "/"; cardExpiry.setText(cleaned); }
+            cardExpiry.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: " +
+                    (cleaned.isEmpty() ? "#dee2e6" : (isValidExpiry(cleaned) ? "#28a745" : "#dc3545")) +
+                    "; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8;");
+            expiryError.setText(!cleaned.isEmpty() && !isValidExpiry(cleaned) ? "MM/YY invalide ou expiré" : "");
+        });
+
+        Label cvvLabel = new Label("CVC");
+        cvvLabel.setStyle("-fx-font-size: 11; -fx-font-weight: bold; -fx-text-fill: #495057;");
+
+        TextField cardCvv = new TextField();
+        cardCvv.setPromptText("123");
+        cardCvv.setMaxWidth(120);
+        cardCvv.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: #dee2e6; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8; -fx-font-family: 'Courier New';");
+
+        Label cvvError = new Label();
+        cvvError.setStyle("-fx-font-size: 10; -fx-text-fill: #dc3545;");
+
+        cardCvv.textProperty().addListener((obs, oldVal, newVal) -> {
+            String cleaned = newVal.replaceAll("[^0-9]", "");
+            if (cleaned.length() > 4) cleaned = cleaned.substring(0, 4);
+            cardCvv.setText(cleaned);
+            cardCvv.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: " +
+                    (cleaned.isEmpty() ? "#dee2e6" : (cleaned.length() >= 3 ? "#28a745" : "#ffc107")) +
+                    "; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8; -fx-font-family: 'Courier New';");
+            cvvError.setText(!cleaned.isEmpty() && cleaned.length() < 3 ? "CVC invalide (3-4 chiffres)" : "");
+        });
+
+        VBox expirySection = new VBox(4, expiryLabel, cardExpiry, expiryError);
+        VBox cvvSection    = new VBox(4, cvvLabel,    cardCvv,    cvvError);
+        expiryPanel.getChildren().addAll(expirySection, cvvSection);
+        HBox.setHgrow(expirySection, javafx.scene.layout.Priority.ALWAYS);
+
+        Label nameLabel = new Label("Nom du titulaire");
+        nameLabel.setStyle("-fx-font-size: 11; -fx-font-weight: bold; -fx-text-fill: #495057;");
+
+        TextField cardholderName = new TextField();
+        cardholderName.setPromptText("Jean Dupont");
+        cardholderName.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: #dee2e6; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8;");
+        cardholderName.setMaxWidth(Double.MAX_VALUE);
+
+        Label nameError = new Label();
+        nameError.setStyle("-fx-font-size: 10; -fx-text-fill: #dc3545;");
+
+        cardholderName.textProperty().addListener((obs, oldVal, newVal) -> {
+            String trimmed = newVal.trim();
+            cardholderName.setStyle("-fx-font-size: 14; -fx-padding: 12 14; -fx-border-color: " +
+                    (trimmed.isEmpty() ? "#dee2e6" : (trimmed.length() >= 3 ? "#28a745" : "#ffc107")) +
+                    "; -fx-border-radius: 8; -fx-border-width: 2; -fx-background-radius: 8;");
+            nameError.setText(!trimmed.isEmpty() && trimmed.length() < 3 ? "Le nom doit contenir au moins 3 caractères" : "");
+        });
+
+        formContainer.getChildren().addAll(
+                cardSectionLabel,
+                cardNumberLabel, cardNumber, cardNumberError,
+                nameLabel, cardholderName, nameError,
+                expiryPanel);
+
+        Button payButton = new Button("💳 Payer maintenant");
+        payButton.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-padding: 14 28; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8; -fx-cursor: hand; -fx-effect: dropshadow(gaussian, rgba(8,145,178,0.3), 8, 0, 0, 2);");
+        payButton.setMaxWidth(Double.MAX_VALUE);
+        payButton.setOnMouseEntered(e -> payButton.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-padding: 14 28; -fx-background-color: #0a7fa7; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8; -fx-cursor: hand; -fx-effect: dropshadow(gaussian, rgba(8,145,178,0.4), 12, 0, 0, 4);"));
+        payButton.setOnMouseExited(e  -> payButton.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-padding: 14 28; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8; -fx-cursor: hand; -fx-effect: dropshadow(gaussian, rgba(8,145,178,0.3), 8, 0, 0, 2);"));
+
+        payButton.setOnAction(e -> {
+            String errorMsg = validatePaymentForm(cardNumber, cardExpiry, cardCvv, cardholderName);
+            if (errorMsg != null) { showError("Validation", errorMsg); return; }
+            processPaymentWithModernForm(livre, selectedStart, selectedEnd, mainContainer,
+                    paymentStep, cardNumber, cardExpiry, cardCvv, cardholderName, payButton);
+        });
+
+        VBox buttonBox = new VBox(payButton);
+        buttonBox.setStyle("-fx-spacing: 15; -fx-padding: 15 0 0 0;");
+        buttonBox.setPrefWidth(Double.MAX_VALUE);
+        formContainer.getChildren().add(buttonBox);
+
+        return formContainer;
+    }
+
+    private boolean isValidCardNumber(String cardNumber) {
+        if (cardNumber.length() < 13 || cardNumber.length() > 19) return false;
+        int sum = 0; boolean alternate = false;
+        for (int i = cardNumber.length() - 1; i >= 0; i--) {
+            int digit = Character.getNumericValue(cardNumber.charAt(i));
+            if (alternate) { digit *= 2; if (digit > 9) digit -= 9; }
+            sum += digit; alternate = !alternate;
+        }
+        return sum % 10 == 0;
+    }
+
+    private boolean isValidExpiry(String expiry) {
+        if (!expiry.matches("\\d{2}/\\d{2}")) return false;
+        String[] parts = expiry.split("/");
+        int month = Integer.parseInt(parts[0]);
+        int year  = Integer.parseInt(parts[1]) + 2000;
+        if (month < 1 || month > 12) return false;
+        return java.time.YearMonth.of(year, month).isAfter(java.time.YearMonth.now());
+    }
+
+    private String validatePaymentForm(TextField cardNum, TextField expiry, TextField cvv, TextField name) {
+        String cardVal   = cardNum.getText().replaceAll("[^0-9]", "");
+        String expiryVal = expiry.getText();
+        String cvvVal    = cvv.getText().replaceAll("[^0-9]", "");
+        String nameVal   = name.getText().trim();
+        if (cardVal.isEmpty())                         return "Veuillez entrer le numéro de carte";
+        if (!isValidCardNumber(cardVal))               return "Numéro de carte invalide";
+        if (expiryVal.isEmpty())                       return "Veuillez entrer la date d'expiration";
+        if (!isValidExpiry(expiryVal))                 return "Date d'expiration invalide ou expirée";
+        if (cvvVal.isEmpty())                          return "Veuillez entrer le CVC";
+        if (cvvVal.length() < 3 || cvvVal.length() > 4) return "CVC invalide (3-4 chiffres)";
+        if (nameVal.isEmpty())                         return "Veuillez entrer le nom du titulaire";
+        if (nameVal.length() < 3)                      return "Le nom doit contenir au moins 3 caractères";
+        return null;
+    }
+
+    // ── FIX 2 + 3: Stripe confirmation + louerLivre() called on success ─────────
+    private void processPaymentWithModernForm(Livre livre, java.time.LocalDate[] selectedStart,
+                                              java.time.LocalDate[] selectedEnd, VBox mainContainer,
+                                              VBox paymentStep, TextField cardNum, TextField expiry,
+                                              TextField cvv, TextField name, Button payButton) {
+        long days         = java.time.temporal.ChronoUnit.DAYS.between(selectedStart[0], selectedEnd[0]) + 1;
+        double bookPrice  = livre.getPrixLocation() != null ? livre.getPrixLocation() : 0;
+        double totalPrice = days * bookPrice;
+        long amountInCents = Math.round(totalPrice * 100);
+
+        payButton.setDisable(true);
+        payButton.setText("⏳ Traitement en cours...");
+        payButton.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-padding: 14 28; -fx-background-color: #6c757d; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8; -fx-cursor: wait;");
+
+        // Capture field values now — must be read on FX thread before async
+        String cardNumVal  = cardNum.getText().replaceAll("[^0-9]", "");
+        String expiryVal   = expiry.getText();          // MM/YY
+        String cvvVal      = cvv.getText().replaceAll("[^0-9]", "");
+
+        CompletableFuture.runAsync(() -> {
+            try {
+                // Ensure Stripe is initialized using the utility
+                StripePaymentHandler.initialize();
+                
+                // ── Map test card numbers to Stripe test tokens ──
+                String testToken = mapCardToTestToken(cardNumVal);
+                
+                // Create a PaymentMethod from the test token
+                Map<String, Object> pmParams = new HashMap<>();
+                pmParams.put("type", "card");
+                pmParams.put("card", Map.of("token", testToken));
+                com.stripe.model.PaymentMethod pm = com.stripe.model.PaymentMethod.create(pmParams);
+
+                // Create the intent
+                com.stripe.model.PaymentIntent intent = StripePaymentHandler.createPaymentIntent(
+                        amountInCents,
+                        livre.getTitre() != null ? livre.getTitre() : "Livre",
+                        currentUserId);
+
+                // Confirm it with the payment method
+                Map<String, Object> confirmParams = new HashMap<>();
+                confirmParams.put("payment_method", pm.getId());
+                intent = intent.confirm(confirmParams);
+
+                final String status = intent.getStatus();
+                final long   daysF  = days;
+
+                Platform.runLater(() -> {
+                    if ("succeeded".equals(status)) {
+                        // ── FIX 3: save the rental to the DB before showing success ──
+                        try {
+                            locationLivreService.louerLivre(livre.getId(), currentUserId, (int) daysF);
+                            refresh();
+                        } catch (SQLDataException dbEx) {
+                            showError("Erreur", "Paiement réussi mais erreur d'enregistrement : " + dbEx.getMessage());
+                            resetPaymentButton(payButton);
+                            return;
+                        }
+                        showPaymentSuccess(mainContainer, livre, daysF);
+                    } else {
+                        showPaymentError(mainContainer, paymentStep, "Paiement non abouti. État : " + status);
+                        resetPaymentButton(payButton);
+                    }
+                });
+
+            } catch (com.stripe.exception.CardException e) {
+                Platform.runLater(() -> { showPaymentError(mainContainer, paymentStep, "Carte refusée : " + e.getMessage()); resetPaymentButton(payButton); });
+            } catch (Exception e) {
+                Platform.runLater(() -> { showPaymentError(mainContainer, paymentStep, "Erreur : " + e.getMessage()); resetPaymentButton(payButton); });
+            }
+        });
+    }
+
+    private void showPaymentSuccess(VBox mainContainer, Livre livre, long days) {
+        VBox successBox = new VBox(20);
+        successBox.setStyle("-fx-padding: 40; -fx-alignment: center; -fx-background-color: white;");
+
+        Label successIcon  = new Label("✅"); successIcon.setStyle("-fx-font-size: 64;");
+        Label successTitle = new Label("Paiement réussi!");
+        successTitle.setStyle("-fx-font-size: 24; -fx-font-weight: bold; -fx-text-fill: #28a745;");
+        Label successMsg = new Label("Votre location de '" + (livre.getTitre() != null ? livre.getTitre() : "Livre") + "' pour " + days + " jour(s) est confirmée.");
+        successMsg.setStyle("-fx-font-size: 14; -fx-text-fill: #495057; -fx-wrap-text: true;");
+        successMsg.setMaxWidth(400);
+        successMsg.setAlignment(javafx.geometry.Pos.CENTER);
+        Label refMsg = new Label("Référence : #" + System.currentTimeMillis());
+        refMsg.setStyle("-fx-font-size: 12; -fx-text-fill: #6c757d;");
+
+        Button closeBtn = new Button("Fermer et retourner");
+        closeBtn.setStyle("-fx-font-size: 14; -fx-padding: 12 28; -fx-background-color: #28a745; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8;");
+            closeBtn.setOnAction(e -> {
+                if (mainContainer.getScene() != null) {
+                    Stage stage = (Stage) mainContainer.getScene().getWindow();
+                    stage.close();
+                }
+            });
+
+        successBox.getChildren().addAll(successIcon, successTitle, successMsg, refMsg, closeBtn);
+        mainContainer.getChildren().setAll(successBox);
+    }
+
+    private void showPaymentError(VBox mainContainer, VBox paymentStep, String errorMsg) {
+        VBox errorBox = new VBox(20);
+        errorBox.setStyle("-fx-padding: 40; -fx-alignment: center; -fx-background-color: white;");
+
+        Label errorIcon  = new Label("❌"); errorIcon.setStyle("-fx-font-size: 64;");
+        Label errorTitle = new Label("Paiement échoué");
+        errorTitle.setStyle("-fx-font-size: 24; -fx-font-weight: bold; -fx-text-fill: #dc3545;");
+        Label errorContent = new Label(errorMsg);
+        errorContent.setStyle("-fx-font-size: 14; -fx-text-fill: #495057; -fx-wrap-text: true;");
+        errorContent.setMaxWidth(400);
+        errorContent.setAlignment(javafx.geometry.Pos.CENTER);
+
+        Button retryBtn = new Button("Réessayer");
+        retryBtn.setStyle("-fx-font-size: 14; -fx-padding: 12 28; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8;");
+        retryBtn.setOnAction(e -> mainContainer.getChildren().setAll(paymentStep));
+
+        Button cancelBtn = new Button("Annuler");
+        cancelBtn.setStyle("-fx-font-size: 14; -fx-padding: 12 28; -fx-background-color: #6c757d; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8;");
+        cancelBtn.setOnAction(e -> {
+                if (mainContainer.getScene() != null) {
+                    Stage stage = (Stage) mainContainer.getScene().getWindow();
+                    stage.close();
+                }
+            });
+
+        HBox buttonBox = new HBox(12, retryBtn, cancelBtn);
+        buttonBox.setAlignment(javafx.geometry.Pos.CENTER);
+        errorBox.getChildren().addAll(errorIcon, errorTitle, errorContent, buttonBox);
+        mainContainer.getChildren().setAll(errorBox);
+    }
+
+    private void resetPaymentButton(Button payButton) {
+        payButton.setDisable(false);
+        payButton.setText("💳 Payer maintenant");
+        payButton.setStyle("-fx-font-size: 14; -fx-font-weight: bold; -fx-padding: 14 28; -fx-background-color: #0891b2; -fx-text-fill: white; -fx-border-radius: 8; -fx-background-radius: 8; -fx-cursor: hand; -fx-effect: dropshadow(gaussian, rgba(8,145,178,0.3), 8, 0, 0, 2);");
+    }
+
+    /**
+     * Map test card numbers to Stripe test tokens
+     */
+    private static String mapCardToTestToken(String cardNumber) {
+        String card = cardNumber.replaceAll("[^0-9]", "");
+        
+        // Stripe test card tokens (for JavaFX without Stripe Elements)
+        if (card.equals("4242424242424242")) return "tok_visa";
+        if (card.equals("4000000000000002")) return "tok_chargeDeclined";
+        if (card.equals("4000002500003155")) return "tok_threeDSecure2Required";
+        if (card.equals("5555555555554444")) return "tok_mastercard";
+        if (card.equals("378282246310005"))  return "tok_amex";
+        
+        // Default to Visa token if card not recognized
+        return "tok_visa";
     }
 }
